@@ -6,9 +6,15 @@ group 'JavaMigrationR12'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 13
+targetCompatibility=13
 
 repositories {
     mavenCentral()
+}
+
+// switch preview
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--enable-preview"]
 }
 
 dependencies {
